--- a/javafx-client/src/main/resources/com/sorda/jfx/views/LobbyView.fxml
+++ b/javafx-client/src/main/resources/com/sorda/jfx/views/LobbyView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -11,29 +12,29 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #383838;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="812.0" style="-fx-background-color: #383838;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="218.0" layoutY="14.0" prefHeight="60.0" prefWidth="165.0" text="Corda Auction" textFill="WHITE">
+      <Label layoutX="323.0" layoutY="14.0" prefHeight="60.0" prefWidth="165.0" text="Corda Auction" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TabPane layoutX="26.0" layoutY="74.0" prefHeight="276.0" prefWidth="547.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="26.0" layoutY="74.0" prefHeight="472.0" prefWidth="759.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="listedItemsTab" text="Listed Items">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="listedItemsTable" layoutX="14.0" layoutY="14.0" prefHeight="185.0" prefWidth="518.0">
+                        <TableView fx:id="listedItemsTable" layoutX="14.0" layoutY="14.0" prefHeight="370.0" prefWidth="728.0">
                           <columns>
-                            <TableColumn fx:id="listedDescriptionColumn" prefWidth="187.0" text="Description" />
-                            <TableColumn fx:id="listedPriceColumn" prefWidth="128.0" text="Current Price" />
-                              <TableColumn fx:id="listedByColumn" prefWidth="91.0" text="Listed By" />
-                              <TableColumn fx:id="auctionEndColumn" prefWidth="111.0" text="Auction Ends" />
+                            <TableColumn fx:id="listedDescriptionColumn" prefWidth="303.0" text="Description" />
+                            <TableColumn fx:id="listedPriceColumn" prefWidth="144.0" text="Current Price" />
+                              <TableColumn fx:id="listedByColumn" prefWidth="119.0" text="Listed By" />
+                              <TableColumn fx:id="auctionEndColumn" prefWidth="161.0" text="Auction Ends" />
                           </columns>
                         </TableView>
-                        <Button fx:id="bidButton" layoutX="14.0" layoutY="204.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Bid" />
-                        <TextField fx:id="bidAmount" layoutX="81.0" layoutY="204.0" />
+                        <Button fx:id="bidButton" layoutX="14.0" layoutY="398.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Bid" />
+                        <TextField fx:id="bidAmount" layoutX="81.0" layoutY="398.0" />
                      </children>
                   </AnchorPane>
             </content>
@@ -42,12 +43,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="myBidsTable" layoutX="14.0" layoutY="14.0" prefHeight="218.0" prefWidth="522.0">
+                        <TableView fx:id="myBidsTable" layoutX="14.0" layoutY="14.0" prefHeight="407.0" prefWidth="730.0">
                           <columns>
-                            <TableColumn fx:id="myBidDescriptionColumn" prefWidth="145.0" text="Description" />
-                            <TableColumn fx:id="myBidAmountBidColumn" prefWidth="115.0" text="Amount Bid" />
-                              <TableColumn fx:id="myBidStatusColumn" prefWidth="111.0" text="Bid Status" />
-                              <TableColumn fx:id="myBidTimeLeftColumn" prefWidth="148.0" text="Time Left" />
+                            <TableColumn fx:id="myBidDescriptionColumn" prefWidth="289.0" text="Item Description" />
+                            <TableColumn fx:id="myBidAmountBidColumn" prefWidth="171.0" text="Amount Bid" />
+                              <TableColumn fx:id="myBidStatusColumn" prefWidth="135.0" text="Bid Status" />
+                              <TableColumn fx:id="myBidTimeLeftColumn" prefWidth="134.0" text="Time Left" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
@@ -57,13 +58,16 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="myItemsTable" layoutX="14.0" layoutY="14.0" prefHeight="184.0" prefWidth="517.0">
+                        <TableView fx:id="myItemsTable" layoutX="14.0" layoutY="14.0" prefHeight="374.0" prefWidth="729.0">
                           <columns>
                             <TableColumn fx:id="myItemsNameColumn" prefWidth="396.0" text="Description" />
-                            <TableColumn fx:id="myItemsListedColumn" minWidth="0.0" prefWidth="120.0" text="Listed" />
+                            <TableColumn fx:id="myItemsListedColumn" minWidth="0.0" prefWidth="332.0" text="Listed" />
                           </columns>
                         </TableView>
-                        <Button fx:id="listItemButton" layoutX="14.0" layoutY="202.0" mnemonicParsing="false" text="List Item" />
+                        <Button fx:id="listItemButton" layoutX="14.0" layoutY="398.0" mnemonicParsing="false" text="List Item" />
+                        <TextField fx:id="listItemDescription" layoutX="94.0" layoutY="398.0" promptText="Description" />
+                        <TextField fx:id="listItemStartingPrice" layoutX="273.0" layoutY="398.0" promptText="Starting Price" />
+                        <DatePicker fx:id="listItemExpiry" layoutX="450.0" layoutY="398.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
