--- a/javafx-client/src/main/resources/com/sorda/jfx/views/LobbyView.fxml
+++ b/javafx-client/src/main/resources/com/sorda/jfx/views/LobbyView.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="812.0" style="-fx-background-color: #383838;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="323.0" layoutY="14.0" prefHeight="60.0" prefWidth="165.0" text="Corda Auction" textFill="WHITE">
@@ -27,10 +25,11 @@
                      <children>
                         <TableView fx:id="listedItemsTable" layoutX="14.0" layoutY="14.0" prefHeight="370.0" prefWidth="728.0">
                           <columns>
-                            <TableColumn fx:id="listedDescriptionColumn" prefWidth="303.0" text="Description" />
-                            <TableColumn fx:id="listedPriceColumn" prefWidth="144.0" text="Current Price" />
-                              <TableColumn fx:id="listedByColumn" prefWidth="119.0" text="Listed By" />
-                              <TableColumn fx:id="auctionEndColumn" prefWidth="161.0" text="Auction Ends" />
+                            <TableColumn fx:id="listedDescriptionColumn" prefWidth="249.0" text="Description" />
+                            <TableColumn fx:id="listedPriceColumn" prefWidth="143.0" text="Current Price" />
+                              <TableColumn fx:id="listedHighestBidderColumn" prefWidth="106.0" text="Highest Bidder" />
+                              <TableColumn fx:id="listedByColumn" prefWidth="90.0" text="Listed By" />
+                              <TableColumn fx:id="auctionEndColumn" prefWidth="139.0" text="Auction Ends" />
                           </columns>
                         </TableView>
                         <Button fx:id="bidButton" layoutX="14.0" layoutY="398.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Bid" />
@@ -48,7 +47,7 @@
                             <TableColumn fx:id="myBidDescriptionColumn" prefWidth="289.0" text="Item Description" />
                             <TableColumn fx:id="myBidAmountBidColumn" prefWidth="171.0" text="Amount Bid" />
                               <TableColumn fx:id="myBidStatusColumn" prefWidth="135.0" text="Bid Status" />
-                              <TableColumn fx:id="myBidTimeLeftColumn" prefWidth="134.0" text="Time Left" />
+                              <TableColumn fx:id="myBidAuctionEndColumn" prefWidth="134.0" text="Auction End" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
@@ -64,10 +63,11 @@
                             <TableColumn fx:id="myItemsListedColumn" minWidth="0.0" prefWidth="332.0" text="Listed" />
                           </columns>
                         </TableView>
-                        <Button fx:id="listItemButton" layoutX="14.0" layoutY="398.0" mnemonicParsing="false" text="List Item" />
-                        <TextField fx:id="listItemDescription" layoutX="94.0" layoutY="398.0" promptText="Description" />
-                        <TextField fx:id="listItemStartingPrice" layoutX="273.0" layoutY="398.0" promptText="Starting Price" />
-                        <DatePicker fx:id="listItemExpiry" layoutX="450.0" layoutY="398.0" />
+                        <Button fx:id="listNewItemButton" layoutX="105.0" layoutY="398.0" mnemonicParsing="false" text="List New Item" />
+                        <TextField fx:id="listItemDescription" layoutX="218.0" layoutY="398.0" promptText="Description" />
+                        <TextField fx:id="listItemStartingPrice" layoutX="397.0" layoutY="398.0" promptText="Starting Price" />
+                        <TextField fx:id="listItemExpiry" layoutX="576.0" layoutY="398.0" promptText="Expiry" text="2020-02-04T23:00:00" />
+                        <Button fx:id="listItemButton" layoutX="14.0" layoutY="398.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="84.0" text="List Item" />
                      </children></AnchorPane>
                </content>
             </Tab>
